--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <title>Hello
-    </title>
+  <meta charset="UTF-8">
+  <title>Home</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-    Kk
+  <nav>
+    <a href="/">Home</a>
+  </nav>
+  <hr>
+
+  <h1>Welcome</h1>
+  <p>This is my personal site. No Squarespace. No tracking. Just HTML and some soft blue.</p>
+
+  <h2>Posts</h2>
+  <ul>
+    <li><a href="/first-post.html">First Post</a></li>
+    <!-- Add more posts here -->
+  </ul>
+
+  <h2>About</h2>
+  <p><a href="/about.html">Learn more about me</a></p>
 </body>
 </html>
