Update design with refined minimalist style

--- a/photos.html
+++ b/photos.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Photos - John Braybrooke</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <nav>
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/thoughts.html">Thoughts</a></li>
-      <li><a href="/photos.html">Photos</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="thoughts.html">Thoughts</a></li>
+      <li><a href="photos.html">Photos</a></li>
     </ul>
   </nav>
 
@@ -21,8 +21,8 @@
 
   <div class="photo-grid">
     <!-- Add your photos here like this: -->
-    <!-- <img src="/images/photo1.jpg" alt="Description of photo"> -->
-    <!-- <img src="/images/photo2.jpg" alt="Description of photo"> -->
+    <!-- <img src="images/photo1.jpg" alt="Description of photo"> -->
+    <!-- <img src="images/photo2.jpg" alt="Description of photo"> -->
 
     <!-- Example placeholders - replace with your actual photos -->
     <!-- Once you add photos to the /images folder, uncomment and update these -->
